--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "opencpu",
   "homepage": "https://www.opencpu.org/",
   "description": "A JavaScript library for OpenCPU",
-  "main": "opencpu",
+  "main": "opencpu.js",
   "dependencies": {
     "jquery": "^3.2.1"
   }
