--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "bugs": {
     "url": "https://github.com/Y0hy0h/opencpu.js/issues"
   },
-  "homepage": "https://github.com/Y0hy0h/opencpu.js#readme"
+  "homepage": "https://github.com/Y0hy0h/opencpu.js#readme",
+  "dependencies": {
+    "jquery": "^3.2.1"
+  }
 }
