--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "homepage": "https://github.com/Y0hy0h/opencpu.js#readme",
   "dependencies": {
     "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "jasmine": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0"
   }
 }
