--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jquery": "^3.2.1"
   },
   "devDependencies": {
+    "@types/es6-promise": "0.0.33",
     "@types/jasmine": "^2.6.0",
+    "fetch-mock": "^5.13.1",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
