--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es5",
     "sourceMap": true,
-    "types": [
-      "jasmine"
-    ]
+    "declaration": true,
+    "outDir": "./dist"
   },
-  "exclude": [
-    "node_modules"
+  "include": [
+    "./src/**/*"
   ]
 }
